<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".authenticate.LoginActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:contentDescription="@string/image" />

    <TextView
        style="@style/AllTitles"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etUsername"
        style="@style/AllEditTexts"
        android:background="@drawable/white_border"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/AllEditTexts"
        android:background="@drawable/white_border"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/AllButtons"
        android:layout_gravity="center"
        android:background="@drawable/button_accent"
        android:onClick="authenticateUser"
        android:text="@string/login" />

    <TextView
        android:id="@+id/txtSignup"
        style="@style/AllTexts"
        android:layout_gravity="center"
        android:onClick="registerNewUser"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</LinearLayout>