<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".main.MainActivity">

    <TextView
        style="@style/AllTitles"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp">

        <TextView
            style="@style/AllTitles"
            android:layout_gravity="center_horizontal"
            android:text="@string/hi"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/tvName"
            style="@style/AllTitles"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="-12dp"
            android:text="@string/name"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_map" />

            <Button
                android:id="@+id/btnLocation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_accent"
                android:onClick="viewLocation"
                android:text="@string/location"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_course" />

            <Button
                android:id="@+id/btnCourses"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_accent"
                android:onClick="viewCourses"
                android:text="@string/courses"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnAddCourses"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-50dp"
                android:background="@drawable/button_accent"
                android:onClick="addCourses"
                android:text="@string/addCourses"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnLink"
        style="@style/AllButtons"
        android:background="@color/colorPrimaryDark"
        android:elevation="2dp"
        android:onClick="viewLink"
        android:text="@string/link"
        android:textColor="@android:color/white" />


    <Button
        android:id="@+id/btnMyProfile"
        style="@style/AllButtons"
        android:background="@color/colorPrimaryDark"
        android:elevation="2dp"
        android:onClick="userProfile"
        android:text="@string/profile"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnLogout"
        style="@style/AllButtons"
        android:background="@color/colorPrimaryDark"
        android:elevation="2dp"
        android:onClick="logtheUserout"
        android:text="@string/logout"
        android:textColor="@android:color/white" />

</LinearLayout>